--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
 <body>
   <v-app id="app" v-cloak>
     <video id="video" v-show="video" width="100%" autoplay muted style="position: absolute;"></video>
-    <canvas id="canvas" :height="height" :width="width" style="display: none;"></canvas>
+    <canvas id="canvas" :height="height/4" :width="width/4" style="display: none;"></canvas>
+    <canvas id="field" :height="fieldHeight" :width="fieldWidth" style="display: none;"></canvas>
     <img :src="image" v-show="!video" width="100%">
     <v-container>
-      <v-btn @click="camera()" fab bottom fixed :loading="loading" style="left: 0; right: 0; margin-left: auto; margin-right: auto;">
+      <v-btn @click="capture()" fab bottom fixed :loading="loading" style="left: 0; right: 0; margin-left: auto; margin-right: auto;">
         <v-icon>photo_camera</v-icon>
       </v-btn>
       <v-dialog v-model="error" max-width="400">
