--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HMI Secure Grading</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Mono|Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
   <style>[v-cloak] {display: none;}</style>
 </head>
@@ -16,7 +16,7 @@
     </v-responsive> -->
     <div id="container" v-show="container" :style="{width: '100%', height: containerHeight+'px', maxHeight: videoEl.offsetHeight+'px', maxWidth: containerWidth+'px', marginLeft: 'auto', marginRight: 'auto', border: '2px solid #00C853', borderRadius: '1px', zIndex: 1}"></div>
     <div v-show="fields">
-      <div v-for="field in settings.form.fields" :style="{height: fieldHeight+'px', width: fieldWidth+'px', top: containerEl.clientTop+field.y*fieldY+'px', left: gap+field.x*fieldX+'px', border: '2px solid #2962FF', borderRadius: '1px', position: 'absolute', zIndex: 1}"></div>
+      <div v-for="field in settings.form.fields" :style="{height: fieldHeight+'px', width: fieldWidth+'px', top: 2+field.y*fieldY+'px', left: gap+field.x*fieldX+'px', border: '2px solid #2962FF', borderRadius: '1px', position: 'absolute', zIndex: 1}"></div>
     </div>
     <!-- <div v-if="container">
         <div v-for="(field, name) in settings.form.fields" :style="{height: fieldHeight, width: fieldWidth, top: compY(field.y)+'px', left: compX(field.x)+'px', border: '2px solid dimgray', borderRadius: '2px', position: 'absolute', zIndex: 1}"></div>
@@ -25,7 +25,7 @@
     <canvas id="canvas" :height="videoEl.videoHeight/4" :width="videoEl.videoWidth/4" style="display: none;"></canvas>
     <canvas id="field" :height="fieldHeight*scale" :width="fieldWidth*scale" style="display: none;"></canvas>
     <img :src="camera.image" v-show="!video" width="100%">
-    <!-- <v-container> -->
+    <v-chip v-show="container" color="primary" text-color="white" small disabled ma-4 style="margin-left: 12px; margin-top: 16px; position: absolute;">{{videoEl.videoWidth}}x{{videoEl.videoHeight}}</v-chip>
     <v-fab-transition>
       <v-btn v-show="video" @click="capture()" :loading="loading" fab large bottom fixed style="left: 0; right: 0; margin-left: auto; margin-right: auto;">
         <v-icon>photo_camera</v-icon>
@@ -72,40 +72,72 @@
         <v-divider></v-divider>
         <v-card-actions>
           <v-spacer></v-spacer>
-          <v-btn large depressed color="primary" v-on:click="dialogs.setup=false; cancel();">Save & Close</v-btn>
+          <v-btn large depressed color="primary" @click="dialogs.setup=false; cancel();">Save & Close</v-btn>
           <v-spacer></v-spacer>
         </v-card-actions>
       </v-card>
     </v-dialog>
-    <v-dialog v-model="dialogs.error" max-width="400">
+    <v-dialog v-model="dialogs.result" :fullscreen="$vuetify.breakpoint.xsOnly" lazy scrollable max-width="500" transition="dialog-bottom-transition">
       <v-card>
-        <v-card-title class="headline">
-          <v-icon class="error--text">error</v-icon>
-          <v-flex px-3>Error</v-flex>
+        <v-card-title style="flex-wrap: nowrap;">
+          <v-flex class="title text-truncate">Results for {{settings.form.name}}</v-flex>
+          <v-spacer></v-spacer>
+          <v-btn @click="dialogs.result=false; cancel();" icon>
+            <v-icon>close</v-icon>
+          </v-btn>
         </v-card-title>
-        <v-card-text>{{errorMsg}}</v-card-text>
+        <v-divider></v-divider>
+        <v-card-text style="height: 100%;">
+          <v-layout row>
+            <v-flex xs6>
+              <v-layout column>
+                <v-sheet v-for="(field, index) in results.results" v-if="index<results.results.length/2" :key="field.name" class="mb-2" tile :color="field.correct?'green lighten-5':'red lighten-5'" :style="{border: '1px solid '+(field.correct?'#4CAF50':'#F44336')+' !important', borderRadius: '1px'}">
+                  <v-layout row>
+                    <v-flex class="font-weight-medium text-truncate" xs8 pl-1>{{field.name}}</v-flex>
+                    <v-flex class="text-xs-right" xs4 pr-1 :style="{backgroundColor: field.confidence<0.6?'#FFEB3B':'unset'}">{{(field.confidence*100).toFixed(2)}}%</v-flex>
+                  </v-layout>
+                  <v-flex class="text-xs-center text-truncate" xs12 px-1 style="font-family: 'Roboto Mono'; border-top: 0.8px solid white; letter-spacing: -0.05em;">{{field.latex}}</v-flex>
+                </v-sheet>
+              </v-layout>
+            </v-flex>
+            <v-flex xs6 ml-3>
+              <v-layout column>
+                <v-sheet v-for="(field, index) in results.results" v-if="index>=results.results.length/2" :key="field.name" class="mb-2" tile :color="field.correct?'green lighten-5':'red lighten-5'" :style="{border: '1px solid '+(field.correct?'#4CAF50':'#F44336')+' !important', borderRadius: '1px'}">
+                  <v-layout row>
+                    <v-flex class="font-weight-medium text-truncate" xs8 pl-1>{{field.name}}</v-flex>
+                    <v-flex class="text-xs-right" xs4 pr-1 :style="{backgroundColor: field.confidence<0.6?'#FFEB3B':'unset'}">{{(field.confidence*100).toFixed(2)}}%</v-flex>
+                  </v-layout>
+                  <v-flex class="text-xs-center" xs12 px-1 style="font-family: 'Roboto Mono'; border-top: 0.8px solid white; letter-spacing: -0.05em;">{{field.latex}}</v-flex>
+                </v-sheet>
+              </v-layout>
+            </v-flex>
+          </v-layout>
+        </v-card-text>
+        <v-divider></v-divider>
         <v-card-actions>
-          <v-spacer></v-spacer>
-          <v-btn @click="dialogs.error=false" flat>Close</v-btn>
+          <v-flex class="subheading font-weight-medium text-xs-center" xs6>Total Score: {{results.score}}</v-flex>
+          <v-flex class="subheading text-xs-center" xs6>{{lowConfidence}} Low Confidence</v-flex>
         </v-card-actions>
       </v-card>
     </v-dialog>
-    <v-dialog v-model="dialogs.result" persistent max-width="500">
+    <v-dialog v-model="dialogs.error" max-width="300">
       <v-card>
-        <v-card-title class="headline">headline</v-card-title>
-        <v-card-text>text</v-card-text>
-        <v-card-actions>
+        <v-toolbar dark card color="error">
+          <v-icon>warning</v-icon>
+          <v-flex class="title" px-3>Error</v-flex>
           <v-spacer></v-spacer>
-          <v-btn color="primary" depressed @click="dialogs.result=false">Done</v-btn>
-        </v-card-actions>
+          <v-btn @click="dialogs.error=false" icon>
+            <v-icon>close</v-icon>
+          </v-btn>
+        </v-toolbar>
+        <v-card-text>{{errorMsg}}</v-card-text>
       </v-card>
     </v-dialog>
-    <!-- </v-container> -->
   </v-app>
-  <script src="/__/firebase/5.8.2/firebase-app.js"></script>
-  <script src="/__/firebase/5.8.2/firebase-database.js"></script>
-  <script src="/__/firebase/5.8.2/firebase-firestore.js"></script>
-  <script src="/__/firebase/5.8.2/firebase-functions.js"></script>
+  <script src="/__/firebase/5.8.3/firebase-app.js"></script>
+  <script src="/__/firebase/5.8.3/firebase-database.js"></script>
+  <script src="/__/firebase/5.8.3/firebase-firestore.js"></script>
+  <script src="/__/firebase/5.8.3/firebase-functions.js"></script>
   <script src="/__/firebase/init.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
