--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <div v-show="fields">
       <div v-for="field in settings.form.fields" :style="{height: fieldHeight+'px', width: fieldWidth+'px', top: 2+field.y*fieldY+'px', left: gap+field.x*fieldX+'px', border: '2px solid #2962FF', borderRadius: '1px', position: 'absolute', zIndex: 1}"></div>
     </div>
-    <video id="video" v-show="video" width="100%" autoplay muted style="position: absolute;"></video>
-    <canvas id="canvas" :height="videoEl.videoHeight/4" :width="videoEl.videoWidth/4" style="display: none;"></canvas>
+    <video id="video" v-show="video" width="100%" autoplay="true" muted="true" playsinline="true" style="position: absolute;"></video>
+    <canvas id="canvas" :height="videoEl.videoHeight/2" :width="videoEl.videoWidth/2" style="display: none;"></canvas>
     <canvas id="field" :height="fieldHeight*scale" :width="fieldWidth*scale" style="display: none;"></canvas>
     <img :src="camera.image" v-show="!video" width="100%">
     <v-chip v-show="container" color="primary" text-color="white" small selected ma-4 style="margin-left: 12px; margin-top: 16px; position: absolute;">{{videoEl.videoWidth}}x{{videoEl.videoHeight}}</v-chip>
@@ -85,7 +85,7 @@
           <v-layout row>
             <v-flex xs6>
               <v-layout column>
-                <v-sheet v-for="(field, index) in results.results" v-if="index<results.results.length/2" :key="field.name" class="mb-2" tile :color="field.correct?'green lighten-5':'red lighten-5'" :style="{border: '1px solid '+(field.correct?'#4CAF50':'#F44336')+' !important', borderRadius: '1px'}">
+                <v-sheet v-for="(field, index) in results.results" v-if="index<results.results.length/2" :key="field.name" class="mb-2" tile :color="field.correct?'green lighten-5':'red lighten-5'" :style="{border: '1px solid '+(field.correct?'#4CAF50':'#F44336')+' !important'}">
                   <v-layout row :style="{backgroundColor: field.confidence<0.6?'#FFF176':'unset'}">
                     <v-flex class="font-weight-medium text-truncate" xs8 pl-1>{{field.name}}</v-flex>
                     <v-flex class="text-xs-right" xs4 pr-1>{{(field.confidence*100).toFixed(2)}}%</v-flex>
@@ -96,7 +96,7 @@
             </v-flex>
             <v-flex xs6 ml-3>
               <v-layout column>
-                <v-sheet v-for="(field, index) in results.results" v-if="index>=results.results.length/2" :key="field.name" class="mb-2" tile :color="field.correct?'green lighten-5':'red lighten-5'" :style="{border: '1px solid '+(field.correct?'#4CAF50':'#F44336')+' !important', borderRadius: '1px'}">
+                <v-sheet v-for="(field, index) in results.results" v-if="index>=results.results.length/2" :key="field.name" class="mb-2" tile :color="field.correct?'green lighten-5':'red lighten-5'" :style="{border: '1px solid '+(field.correct?'#4CAF50':'#F44336')+' !important'}">
                   <v-layout row :style="{backgroundColor: field.confidence<0.6?'#FFF176':'unset'}">
                     <v-flex class="font-weight-medium text-truncate" xs8 pl-1>{{field.name}}</v-flex>
                     <v-flex class="text-xs-right" xs4 pr-1>{{(field.confidence*100).toFixed(2)}}%</v-flex>
@@ -133,7 +133,7 @@
   <script src="/__/firebase/5.8.3/firebase-firestore.js"></script>
   <script src="/__/firebase/5.8.3/firebase-functions.js"></script>
   <script src="/__/firebase/init.js"></script>
-  <!-- TODO: change to minified script for production -->
+  <!-- REMINDER: change to minified script for production -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
   <script src="index.js"></script>
