--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
     <canvas id="canvas" :height="videoEl.videoHeight/2" :width="videoEl.videoWidth/2" style="display: none;"></canvas>
     <canvas id="field" :height="fieldHeight*scale" :width="fieldWidth*scale" style="display: none;"></canvas>
     <img :src="camera.image" v-show="!video" width="100%">
-    <v-chip v-show="container" color="primary" text-color="white" small selected ma-4 style="margin-left: 12px; margin-top: 16px; position: absolute;">{{videoEl.videoWidth}}x{{videoEl.videoHeight}}</v-chip>
+    <v-chip v-show="container" color="primary" text-color="white" small selected ma-4 style="margin-left: 12px; margin-top: 16px; position: absolute;">{{videoEl.videoWidth}} x {{videoEl.videoHeight}}</v-chip>
     <v-fab-transition>
       <v-btn v-show="video" @click="capture()" :loading="loading" fab large bottom fixed style="left: 0; right: 0; margin-left: auto; margin-right: auto;">
         <v-icon>photo_camera</v-icon>
       </v-btn>
     </v-fab-transition>
     <v-fab-transition>
-      <v-btn v-show="video" @click="dialogs.setup=true; capture();" fab small top right fixed>
+      <v-btn v-show="video" @click="dialogs.setup=true; stop();" fab small top right fixed>
         <v-icon>settings</v-icon>
       </v-btn>
     </v-fab-transition>
@@ -66,7 +66,7 @@
         <v-divider></v-divider>
         <v-card-actions>
           <v-spacer></v-spacer>
-          <v-btn large depressed color="primary" @click="dialogs.setup=false; cancel();">Save & Close</v-btn>
+          <v-btn large depressed color="primary" @click="dialogs.setup=false; start();">Save & Close</v-btn>
           <v-spacer></v-spacer>
         </v-card-actions>
       </v-card>
@@ -133,7 +133,7 @@
   <script src="/__/firebase/5.8.3/firebase-firestore.js"></script>
   <script src="/__/firebase/5.8.3/firebase-functions.js"></script>
   <script src="/__/firebase/init.js"></script>
-  <!-- REMINDER: change to minified script for production -->
+  <!-- TODO: change to minified script for production -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
   <script src="index.js"></script>
