Improve LaTeX consistency

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
                     <v-flex class="font-weight-medium text-truncate" xs8 pl-1>{{field.name}}</v-flex>
                     <v-flex class="text-xs-right" xs4 pr-1>{{(field.confidence*100).toFixed(2)}}%</v-flex>
                   </v-layout>
-                  <v-flex class="text-xs-center text-truncate" xs12 px-1 style="font-family: 'Roboto Mono'; border-top: 0.8px solid white; letter-spacing: -0.05em;">{{field.latex}}</v-flex>
+                  <v-flex class="text-xs-center" xs12 px-1 style="font-family: 'Roboto Mono'; border-top: 0.8px solid white; letter-spacing: -0.05em;">{{field.latex}}</v-flex>
                 </v-sheet>
               </v-layout>
             </v-flex>
