Revert dependency versions

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HMI Secure Grading</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Mono|Material+Icons" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@1.5.4/dist/vuetify.min.css" rel="stylesheet">
   <style>[v-cloak] {display: none;}</style>
 </head>
 <body>
@@ -139,8 +139,8 @@
   <script src="/__/firebase/5.8.3/firebase-functions.js"></script>
   <script src="/__/firebase/init.js"></script>
   <!-- TODO: change to minified script for production -->
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.8/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@1.5.4/dist/vuetify.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
