--- a/public/index.html
+++ b/public/index.html
@@ -139,8 +139,8 @@
   <script src="/__/firebase/5.8.3/firebase-functions.js"></script>
   <script src="/__/firebase/init.js"></script>
   <!-- TODO: change to minified script for production -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.8/dist/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuetify@1.5.4/dist/vuetify.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.8/dist/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@1.5.4/dist/vuetify.min.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
